fix: Add spacing to projects for smaller screens

--- a/src/styles/_singleProject.scss
+++ b/src/styles/_singleProject.scss
@@ -31,6 +31,7 @@
             display: flex;
             flex-flow: row wrap;
             gap: 15px;
+            margin-bottom: 15px !important;
 
         }
 
